2003-10-26  Kjartan Maraas  <kmaraas@gnome.org>

	* charpick.c: Remove tgmath.h include. Isn't needed under
	Linux either. Closes bug #117622.

2003-09-03  Kevin Vandersloot

	* charpick.c: fix build on Solaris. Patch from Hidetoshi Tajima. Fixes
	bug #121309

2003-08-24	 Irene Ryan <irene.ryan@sun.com>

	* help/C/char-palette.xml, char-palette-C.omf: updates to Help for
	  GNOME 2.4 release
	* help/C/l10n.txt: updated info for L10N teams
	* help/C/figures/charpalette_applet.png: new screenshot

2003-07-23  Kevin Vandersloot

	* schemas.in: Clean up strings here

2003-07-21  Dennis Cranston <dennis_cranston at yahoo com>

	* properties.c:  HIGify widget padding between the vbox and 
	action area of the dialogs.  Thanks to <chris@gnome-de.org>
	Christian - Manny Calavera - Neumair.
	
Thu Jul 03 17:08:30 2003  George Lebl <jirka@5z.com>

	* charpick.[ch], properties.c: key-writability fixes.  If chartable
	  is not writable don't allow editting it/adding to it.  If the
	  current_list is not writable still allow switching between pallets,
	  just don't save the value for next loadup (that seems to make more
	  sense then not allowing switching at all).  Also fix crash when
	  you change the current pallete and then log out.  The code is
	  a nightmare of pointer shuffling and memory leaks.

	* charpick.schemas.in: fix owner of chartable, fix typo

2003-06-16  Kevin Vandersloot

	* properties.c: add some accesibility stuff. Also set the sensitivity of the edit/remove buttons
	according to the selection

2003-06-05  Kevin Vandersloot

	* charpick.c: make the relief none on the add palettes button so it doesn't stick
	out. Add an "add paellte" menu item and popup the dialog if pressed to the menu.
	
	* charpick.h, properties: make the edit_palette function non static.

2003-06-01  Kevin Vandersloot

	* charpick.c: pack the buttons tighter on larger panels. Fixes bug #95438. Also
	make the applet expand for Fitt's law.

2003-05-30 Ray Strode  <halfline@hawaii.rr.com> 
