@@ -1,3 +1,9 @@
+2003-11-09  Kevin Vandersloot
+
+	* charpick.c, properties.c: Fix crash when removing all the palettes. Also fix
+	possible crash on startup. Fixes bug #124349. Most of the patch from
+	Shakti Sen.
+
 2003-10-26  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* charpick.c: Remove tgmath.h include. Isn't needed under
